fixed room reservations alignment issues

--- a/components/resources/roomreservations/roomreservations.css
+++ b/components/resources/roomreservations/roomreservations.css
@@ -12,7 +12,6 @@
 
 .room-category {
     color: #515768;
-    padding: 30px;
     margin-bottom: 1%;
     margin-left: auto;
     margin-right: auto;
@@ -35,9 +34,6 @@
 }
 
 .reservation-email-link {
-    padding: 5px;
-    margin-left: auto;
-    margin-right: auto;
     text-align: center;
     background-color: #515768;
     transition: 0.2s ease-in-out;
@@ -73,6 +69,7 @@
     font-size: 1.2em;
     text-align: center;
     font-weight: normal;
+    vertical-align: middle;
 }
 
 .scheduler-container {
